objects/Collateral_Association__c.object
<CustomObject>
    <customHelpPage>Collateral_Management</customHelpPage>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Agreement Collaterals</relationshipLabel>
        <relationshipName>Collateral_Association</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collateral_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collateral Relationship</label>
        <referenceTo>Collateral_Relationship__c</referenceTo>
        <relationshipLabel>Collateral Association</relationshipLabel>
        <relationshipName>Collateral_Association</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collateral_Type__c</fullName>
        <formula>Collateral__r.Collateral_Type1__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collateral Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral_Value__c</fullName>
        <formula>Collateral__r.Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collateral Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Collateral__c</fullName>
        <label>Collateral</label>
        <referenceTo>Collateral__c</referenceTo>
        <relationshipLabel>Collateral Associations</relationshipLabel>
        <relationshipName>Collateral_Association</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Condition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Condition</label>
        <referenceTo>Condition__c</referenceTo>
        <relationshipLabel>Condition Collateral</relationshipLabel>
        <relationshipName>Collateral_Association</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal</label>
        <referenceTo>advpm__Matter__c</referenceTo>
        <relationshipLabel>Deal Collateral</relationshipLabel>
        <relationshipName>Collateral_Association</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT (Collateral__r.Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Type__c</fullName>
        <formula>TEXT( Collateral__r.Value_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value Type</label>
        <type>Text</type>
    </fields>
    <label>Collateral Association</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Collateral Association No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collateral Association</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>